# LIOTHIL

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
assets/: BANNER_SPEC.md
dimljus/: __init__.py
docs/: CONTROL_SIGNAL_ARCHITECTURE.md  EXISTING_TRAINERS.md  EXPERT_WEIGHT_ANALYSIS.md  FORK_AND_SPECIALIZE.md  FOUR_PATH_TRAINING_STRATEGY.md  MODEL_LANDSCAPE.md  OPTIMIZER_SCHEDULER_RESEARCH.md  PHASE5_REVIEW_NOTES.md  PIPELINES.md  README.md  RESEARCH_LOG.md  TECHNICAL_ARCHITECTURE.md  TRAINING_CONFIG_WALKTHROUGH.md  TRAINING_METHODOLOGY.md  WALKTHROUGH_SCRATCH.md  WAN_TRAINING_DATA.md  handover.md  handover_timothy.md  reply_differential_moe_i2v.md  setup_log.md
examples/: full_data.yaml  full_train.yaml  minimal_data.yaml  standard_data.yaml
runpod/: README.md  check_mapping.py  dataset-config.toml  diagnose_inference.py  manual_forward.py  sample_prompts.txt  setup.sh  test-train.yaml  test2-unified-only.yaml  test3-experts-only.yaml  test3-inference.py  test4-inference.py  test4-low-only.yaml  test5-high-only.yaml  test_base_inference.py  test_from_pretrained.py  test_inference.py  test_isolate_bug.py  test_lora_inference.py  test_scheduler_comparison.py  train.py  validate_isolation_samples.py
scripts/: _compare_tv.py  compare_experts_to_21.py  compare_task_vectors.py  generate_report_charts.py  task_vector_analysis.py  task_vector_analysis_i2v.py  (+2 more)
(+192 files in other folders)
